2005-12-22  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin Adler.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6118
        Investigate not using the frameset charset as a default for frames

        * fast/encoding/frame-default-enc-expected.checksum: Added.
        * fast/encoding/frame-default-enc-expected.png: Added.
        * fast/encoding/frame-default-enc-expected.txt: Added.
        * fast/encoding/frame-default-enc.html: Added.
        * fast/encoding/resources/frame-default-enc-frame.html: Added.

2005-12-22  Justin Garcia  <justin.garcia@apple.com>

        <http://bugzilla.opendarwin.org/show_bug.cgi?id=6211>
        fast/text/attributed-substring-from-range-lines needs LayoutTests/editing/editing.js

        * editing/input/attributed-substring-from-range-lines-expected.txt: Added.
        * editing/input/attributed-substring-from-range-lines.html: Added.
        * fast/text/attributed-substring-from-range-lines-expected.txt: Removed.
        * fast/text/attributed-substring-from-range-lines.html: Removed.

2005-12-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

	- updated for WebCore changes to make XSLT params partially work

        * fast/xsl/xslt-processer-expected.txt:

2005-12-22  Adele Peterson  <adele@apple.com>

        Reviewed by Tim Hatcher.

        Tests for <rdar://problem/4387433> Seed: Radio buttons behave incorrectly in Gmail settings

        * fast/forms/radio_checked_dynamic-expected.checksum: Added.
        * fast/forms/radio_checked_dynamic-expected.png: Added.
        * fast/forms/radio_checked_dynamic-expected.txt: Added.
        * fast/forms/radio_checked_dynamic.html: Added.

2005-12-22  Darin Adler  <darin@apple.com>

        Reviewed by Eric.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6192
          add support for non-standard &nsup; entity (implemented in other browsers)

        * fast/parser/nsup-entity-expected.txt: Added.