@@ -1,0 +1,4 @@
+This test checks for a regression against http://bugzilla.opendarwin.org/show_bug.cgi?id=6236 REGRESSION: Crash in DOMString::replace() in ToT (12/25/05).
+
+No crash = test PASS.
+
