@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="EUC-JP"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head>
+<script type="text/javascript">
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+<title>
+</title>
+</head>
+<body>
+<p>
+This test checks for a regression against
+<i><a href="http://bugzilla.opendarwin.org/show_bug.cgi?id=6236">http://bugzilla.opendarwin.org/show_bug.cgi?id=6236</a> REGRESSION: Crash in DOMString::replace() in ToT (12/25/05)</i>.
+</p>
+No crash = test PASS.
+</p>
+<form>
+<input type="text"/>
+</form>
+</body>
+</html>
